Jan 31, 2022
  tuned up logging

Jan 14, 2022
  updated log4j to avoid zero day exploit

Feb 09, 2021
  fixed NullPointerException

Mar 13, 2020
  removed handling of 'predicted','mapped' in gene symbol/names
    reason: no longer relevant, this code is obsolete: there are no genes in RGD that have these words in gene name or symbol
    change reviewed and approved by Stan

v.2.0.0, Feb 11, 2019
  improved logging

v.1.2, Jul 10, 2017
  upgraded from ANT to GRADLE

v.1.1, Dec 3, 2014
  updated jars



TODO: currently the code of NomenclatureManager and InformaticPrescreener is duplicated in rgdweb project.
   There should be only one copy of the code.